added: link to docs

--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
 <form class="w3-container w3-card-4" action="/display" method="post">
   <h2 class="w3-text-blue">Shape Server</h2>
   <p>Enter in your shapes below and hit render!</p>
-  <p>      
+  <p>For details on how to enter a shape correctly check out <a href="http://github.com/McGizzle/svg-n-scotty">the docs</a></p>      
   <label class="w3-text-blue"><b>Drawing</b></label>
   <input class="w3-input w3-border" name="shape1" type="text" value="[(Scale 5 5, Circle, Fill Blue),(Compose (Translate 5 5) (Scale 10 5), Square, Glue (Fill Green) (Stroke Blue))]"></p>
   <p>      
